fixed searchbar width on mobile, added box-shadow to listing images

--- a/src/ListingCard.css
+++ b/src/ListingCard.css
@@ -1,6 +1,7 @@
 .card-img {
   border-radius: 10px;
   height: 250px;
+  box-shadow: 0 2px 5px 0 var(--gray-color);
 }
 
 .card-location {
