--- a/src/ListingsList.css
+++ b/src/ListingsList.css
@@ -5,6 +5,10 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+img:focus {
+  box-shadow: 0 1px 2px 0 var(--gray-color);
+}
+
 .search__container {
   width: 100%;
   margin-top: 30px;
